# qsar-semestral-project

./: .gitignore  README.md  experiments.ipynb  pyproject.toml
presentation/: presentation.aux  presentation.bbl  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.tex  references.bib
presentation/scripts/: .data.py.swp  confusion_matrix_pretty_print.py  data.py
