[tool.poetry]
name = "qsar-semestral-project"
version = "0.1.0"
description = ""
authors = ["Jan Uhlík <jan@uhlik.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7"
numpy = "*"
pandas = "*"
matplotlib = "*"
pyqt5 = "*"
tqdm = "*"
torch = "*"
torchvision = "*"
pillow = "*"
skorch = "^0.7.0"
scikit-learn = "^0.22"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pylint = "*"
jedi = "*"
rope = "*"
flake8 = "*"
ipython = "*"
ipykernel = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
